--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.0.0" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.11" />
   </ItemGroup>
 
   <ItemGroup Condition=" ('$(TargetFramework)' == 'net5.0')">
